2009-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fix warning messages when pass only group as
	string or integer in the function "isAllGroups".
	* include/functions_reporting.php: fix ambiguous colummn in query in the
	function "get_group_stats".

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_custom_graphs.php: fix the name of custom graphs in the
	config select box in widget.
	Fixes: 2918740

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, include/functions_db.php: fix alert message
	when the history DB is'nt setup.
	
	* general/header.php: fix alert message when the custom logo didn't exit.

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: clean source code, fix when try show boolean without
	data, and some changes in "grafico_modulo_sparse".
	
	* operation/agentes/stat_win.php: clean source code.

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add debug function "f2str" that return as
	string any call of function, for example "var_dump".
	
	*include/fgraph.php: into function "grafico_modulo_boolean" re-add alarms,
	clean source code and show again the flash graph.
	
	*include/functions_db.php: fix the access to IP client, it used very
	deprecate var, that clean of notice php message of error for this cause.

2009-12-21  Ramon Novoa  <rnovoa@artica.es>

	* include/api.php: Added an Enterprise API.

2009-12-21  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: clean source code.
	
	* operation/agentes/datos_agente.php: fix bug, there was a wrong copy&paste,
	now there is correct parameters.
	Fixes: 2916332

2009-12-18  Sancho lerena <slerena@artica.es>

	* pandora_console.spec: Ypdated build.

	* pandora_console_upgrade: Applied patch for more verbose information, submitted in 
	Sourceforge.

	* pandoradb_data.sql: Updated version to FINAL build and version ;-)
