@@ -1,3 +1,10 @@
+2009-12-23  Sancho Lerena <slerena@artica.es>
+
+	* include/config_process.php: Updated build.
+
+	* godmode/agentes/planned_downtime.php: Fixed bad render when downtime
+	is running.
+
 2009-12-23  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_db.php: fix warning messages when pass only group as
